--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,6 +1,6 @@
 # These are supported funding model platforms
 
-Frindestown: # Replace with a single Patreon username
+patreon: Frindestown
 open_collective: # Replace with a single Open Collective username
 ko_fi: # Replace with a single Ko-fi username
 liberapay: # Replace with a single Liberapay username
